--- a/style.css
+++ b/style.css
@@ -99,3 +99,18 @@ nav a {
     padding: 10px;
     margin: 5px;
 }
+
+.rolling-circle {
+    width: 50px;
+    height: 50px;
+    background-color: #512888;
+    border-radius: 50%;
+    position: relative;
+    animation: roll 3s linear infinite;
+}
+
+@keyframes roll {
+    0% { left: 0; transform: rotate(0deg); }
+    50% { left: 100%; transform: rotate(360deg); }
+    100% { left: 0; transform: rotate(0deg); }
+}
