--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ nav a {
 .rolling-circle {
     width: 50px;
     height: 50px;
-    background-color: white;
+    background-color: #FFFFFF;
     border-radius: 50%;
     position: relative;
     animation: roll 3s linear infinite;
